tests/baselines/reference/propertyAssignment.errors.txt
tests/cases/compiler/propertyAssignment.ts(6,14): error TS1022: An index signature parameter must have a type annotation.
tests/cases/compiler/propertyAssignment.ts(14,1): error TS2322: Type '{ x: number; }' is not assignable to type 'new () => any'.
tests/cases/compiler/propertyAssignment.ts(16,1): error TS2322: Type '{ x: number; }' is not assignable to type '() => void'.


==== tests/cases/compiler/propertyAssignment.ts (3 errors) ====
    
    
    var foo1: { new ():any; }   
    var bar1: { x : number; }
    
    var foo2: { [index]; } // should be an error
                 ~~~~~
!!! error TS1022: An index signature parameter must have a type annotation.
    var bar2: { x : number; }
    
    var foo3: { ():void; }
    var bar3: { x : number; }
    
    
    
    foo1 = bar1; // should be an error
    ~~~~
!!! error TS2322: Type '{ x: number; }' is not assignable to type 'new () => any'.
    foo2 = bar2; 
    foo3 = bar3; // should be an error
    ~~~~
!!! error TS2322: Type '{ x: number; }' is not assignable to type '() => void'.